0.9.0
 - cli: add `compression` parameter
 - setup: bump dcnum to 0.26.0 (separate writer process)
0.8.0
 - fix: when user quits GUI during processing, forcibly kill all processes
 - docs: add installation section
 - setup: add psutil dependency
 - setup: bump dcnum to 0.25.11 (measurement identifiers in basins)
0.7.0
 - build: add torch-CUDA libraries to release binaries
0.6.8
 - fix: consistently use click.ClickException
0.6.7
 - tests: correctly capture stderr instead of stdout (click 8.2)
 - setup: bump click to 8.2
0.6.6
 - docs: properly employ license GPL-3.0-or-later
 - setup: bump dcnum to 0.25.10
0.6.5
 - enh: improve error message when input file is invalid (#13)
0.6.4
 - setup: bump dcnum from 0.25.3 to 0.25.5
0.6.3
 - ref: use dcnum methods to set environment variables for single threads
 - setup: bump dcnum from 0.25.2 to 0.25.3
0.6.2
 - docs: fix typo in CLI help page
 - setup: bump dcnum from 0.25.0 to 0.25.2 (minor speed-up)
 - setup: support numpy 2
0.6.1
 - enh: automatically detect flickering and apply offset correction
 - setup: bump dcnum from 0.24.0 to 0.25.0 (flickering detection)
0.6.0
 - feat: implement segmenter validation step in CLI and GUI
 - feat: support PyTorch segmentation models
 - fix: show correct default mask postprocessing arguments in CLI help
 - setup: bump dcnum from 0.22.1 to 0.24.0 (internal basins)
 - setup: change required pytorch version from 2.3 to 2.2 (hardware support)
0.5.0
 - setup: bump dcnum from 0.20.1 to 0.22.1
0.4.1
 - enh: make chipstream.gui and chipstream.cli executable as a package
0.4.0
 - feat: CLI by default creates output file that contains no redundant
   data and uses the input file as a basin; old behavior can be brought
   back with the "--drain-basins" command-line option
 - feat: implement same behavior for GUI as for CLI, with the
   "Exploit basins" checkbox
 - fix: show correct data PPID in CLI
 - setup: bump dcnum from 0.19.1 to 0.20.1
 - docs: add tool tips for most controls
0.3.1