@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.10']
+        python-version: ['3.13']
         os: [macos-latest, ubuntu-latest, windows-latest]
         deps: ["none", "all"]
     env:
