@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.13"]
         os: [windows-latest]
         # os: [macos-latest, windows-latest]
     steps:
